Tests/Runtime2/Error/Handling/.build/throwerror.pr
{
  "name": "ThrowError",
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022something went wrong\u0022",
      "lineNumber": 2,
      "indent": 0,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "something went wrong",
              "type": "string"
            }
          ],
          "errors": [],
          "warnings": []
        }
      ],
      "errors": [],
      "warnings": [],
      "waitForExecution": true
    }
  ],
  "subGoals": [],
  "visibility": 1,
  "path": "/ThrowError.goal",
  "prPath": "/.build/throwerror.pr",
  "hash": "6ccadac526a3dd0a1b833261d2e06d9a08d10695620d44cd81f83689fbedc66f",
  "isSetup": false,
  "isEvent": false,
  "isTest": false,
  "errors": [],
  "warnings": [],
  "fullPath": "ThrowError"
}